# kcap

./: .gitignore  2pcfs_demo_likelihood.ini  2pcfs_likelihood_cosmosis_interface.cc  BandPower_interface.cc  CMakeLists.txt  COSEBIsFromData.yaml  COSEBIs_2PCFs_cosmosis_interface.cc  COSEBIs_Cl_cosmosis_interface.cc  COSEBIs_cosmosis_interface.cc  COSEBIs_covariance_cosmosis_interface.cc  Installing kcap for dummies.md  K1K_BandPowers.data.benchmark  K1K_BandPowers.data.benchmark_hmcode  K1K_COSEBIs.data.benchmark_hmcode  Makefile  README.md  __init__.py  bandPower_g_interface.cc  bandpower.yaml  build.py  conda_env.yaml  cosebis_demo_likelihood.ini  cosebis_demo_theory.ini  module.yaml  scale_cuts.py  setup.py  v2_README.md  wrapper_twopoint.py  xipm.yaml  xipm_binned.cc
cosebis/: .gitignore  2PCFs_Cl_cosmosis_interface.cc  2pcfs_likelihood_cosmosis_interface.cc  BandPower_interface.cc  BandPower_interface_real.cc  BandPower_likelihood_interface.cc  CMakeLists.txt  COSEBIs_2PCFs_cosmosis_interface.cc  COSEBIs_Cl_cosmosis_interface.cc  COSEBIs_cosmosis_interface.cc  COSEBIs_covariance_cosmosis_interface.cc  COSEBIs_likelihood_cosmosis_interface.cc  Makefile  bandpower_demo_theory.ini  bandpower_g_test.ini  bandpower_real_test.ini  bandpower_test.ini  bash_run_measure_cosebis.sh  cosebis.yaml  cosebis_2pcfs_demo.ini  cosebis_demo_Measurement.ini  module.yaml  xipm.yaml  xipm_binned.cc
cosebis/BandPower/: g_0_1_0.50-300.00.table
cosebis/BandPower_apodisation_test/: W_ap0.00_0_140.29-196.80_0.50-300.00.table  W_ap0.00_2_1069.25-1500.00_0.50-300.00.table  W_ap0.00_4_100.00-140.29_0.50-300.00.table  W_ap0.00_4_1069.25-1500.00_0.50-300.00.table  W_ap0.00_4_762.20-1069.25_0.50-300.00.table  W_ap0.50_0_100.00-140.29_0.50-300.00.table  W_ap0.50_0_762.20-1069.25_0.50-300.00.table  W_ap0.50_2_276.08-387.30_0.50-300.00.table  W_ap0.50_2_387.30-543.32_0.50-300.00.table  W_ap0.50_2_543.32-762.20_0.50-300.00.table  W_ap0.50_4_543.32-762.20_0.50-300.00.table  W_noAp_0_387.30-543.32_0.50-300.00.table  W_noAp_0_762.20-1069.25_0.50-300.00.table  g_0_2_0.50-300.00.table  g_0_8_0.50-300.00.table  g_2_6_0.50-300.00.table  g_4_2_0.50-300.00.table  g_4_3_0.50-300.00.table  g_4_4_0.50-300.00.table  g_4_5_0.50-300.00.table  g_4_6_0.50-300.00.table  g_4_8_0.50-300.00.table
cosebis/BandPower_outputs/: W_ap_0_1069.25-1500.00_0.25-397.00.table  W_ap_0_196.80-276.08_0.25-397.00.table  W_noAp_0_140.29-196.80_0.25-397.00.table  W_noAp_0_276.08-387.30_0.25-397.00.table  W_noAp_0_387.30-543.32_0.25-397.00.table  W_noAp_2_140.29-196.80_0.25-397.00.table  W_noAp_2_196.80-276.08_0.25-397.00.table  W_noAp_2_276.08-387.30_0.25-397.00.table  W_noAp_2_387.30-543.32_0.25-397.00.table  W_noAp_2_543.32-762.20_0.25-397.00.table  W_noAp_2_762.20-1069.25_0.25-397.00.table  W_noAp_4_100.00-140.29_0.25-397.00.table  W_noAp_4_1069.25-1500.00_0.25-397.00.table  W_noAp_4_196.80-276.08_0.25-397.00.table  W_noAp_4_276.08-387.30_0.25-397.00.table  W_noAp_4_387.30-543.32_0.25-397.00.table  W_noAp_4_543.32-762.20_0.25-397.00.table  W_noAp_4_762.20-1069.25_0.25-397.00.table
cosebis/BandPower_outputs_all_arcmin/: W_ap0.50_4_100.00-140.29_0.50-300.00.table  g_4_1_0.50-300.00.table
cosebis/BandPower_outputs_g_range/: W_ap0.50_2_100.00-140.29_0.50-300.00.table  W_ap0.50_4_100.00-140.29_0.50-300.00.table
cosebis/BandPower_outputs_test_g/: W_ap0.50_0_100.00-140.29_0.50-300.00.table
cosebis/BandPower_outputs_test_g_table/: W_ap0.50_2_100.00-140.29_0.50-300.00.table  W_ap0.50_4_100.00-140.29_0.50-300.00.table  g_0_1_0.39-385.21.table
cosebis/TLogsRootsAndNorms/: Normalization_0.20-40.00.table  Normalization_0.50-100.00.table  Normalization_0.50-250.00.table  Normalization_1.00-100.00.table  Normalization_1.00-2.00.table  Normalization_1.00-200.00.table  Normalization_1.00-40.00.table  Normalization_1.00-400.00.table  Normalization_100.00-250.00.table  Normalization_4.00-250.00.table  Normalization_40.00-250.00.table  Normalization_8.00-250.00.table  Root_0.20-200.00.table  Root_0.20-40.00.table  Root_0.50-100.00.table  Root_0.50-250.00.table  Root_0.50-72.00.table  Root_0.80-350.00.table  Root_0.80-350.00.table~  Root_1.00-100.00.table  Root_1.00-1000.00.table  Root_1.00-200.00.table  Root_1.00-40.00.table  Root_1.00-4000.00.table  Root_100.00-250.00.table  Root_20.00-400.00.table  Root_4.00-250.00.table  Root_40.00-100.00.table  Root_40.00-100.00.table~  Root_40.00-250.00.table  Root_8.00-250.00.table  Root_8.00-300.00.table
cosebis/Tplus_minus/: Tminus10_0.50-100.00.table  Tminus13_0.50-100.00.table  Tminus15_0.50-100.00.table  Tminus16_0.50-100.00.table  Tminus18_0.50-100.00.table  Tminus19_0.50-100.00.table  Tminus20_0.50-100.00.table  Tminus3_0.50-100.00.table  Tminus4_0.50-100.00.table  Tminus5_0.50-100.00.table  Tminus6_0.50-100.00.table  Tminus7_0.50-100.00.table  Tminus8_0.50-100.00.table  Tminus9_0.50-100.00.table  Tplus10_0.50-100.00.table  Tplus12_0.50-100.00.table  Tplus13_0.50-100.00.table  Tplus14_0.50-100.00.table  Tplus17_0.50-100.00.table  Tplus19_0.50-100.00.table  Tplus1_0.50-100.00.table  Tplus20_0.50-100.00.table  Tplus2_0.50-100.00.table  Tplus4_0.50-100.00.table  Tplus5_0.50-100.00.table  Tplus6_0.50-100.00.table  Tplus7_0.50-100.00.table  Tplus8_0.50-100.00.table  Tplus9_0.50-100.00.table
cosebis/demos/: bandpower_demo.ini  cosebis_cov_demo.ini
cosebis/example_files/: .gitignore  covariance.ascii  cuts_mat_test.ascii  lens_flinc_nofz.fits  nofZ_KV450_5bins.fits  xipm_data.ascii
cosebis/iniFiles/: cosebis_kids_emcee_IA_6params_1_100.ini  cosebis_kids_emcee_IA_OmS8_1_100.ini  cosebis_kids_emcee_noIA_OmS8_1_100.ini  cosebis_kids_test_IA_OmS8_1_100.ini  cosebis_kv450_emcee_IA_6params_05_72.ini  cosebis_kv450_emcee_nosys_05_300.ini  cosebis_kv450_emcee_nosys_05_300_MA_CEMixed_scaled.ini  cosebis_kv450_emcee_nosys_05_300_MA_CEnTh.ini  prior_KV450.ini  values_kids_IA_6params.ini  values_kids_IA_OmS8.ini  values_kids_noIA_5params.ini  values_kv450_Ok_IA.ini
cosebis/measurement_pipeline/: run_measure_cosebis.py  (+1 more)
cosebis/modules/: BandPower.cc  (+26 more)
cosmosis-standard-library/: .gitignore  CMakeLists.txt  setup.py
(+1050 files in other folders)
